--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   </div>
 
   <div class="imageRadio">
-    <img src="./img/microfono.png" alt="Queda en la tarde" class="moveRadio">
+    <img src="./img/microfono.png" alt="Queda en la tarde" class="moveRadio" data-speed="-3">
   </div>
 </section>
     <!-- Poner un formulario para llenarse y se contactado -->
@@ -398,6 +398,8 @@
 
     <!-- Swipper       -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- GSP CDN LINK -->
+    <script src="  https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
     <!-- Javascript -->
     <script src="./js/main.js"></script>
     <!-- fontawseome -->
